--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,72 +11,71 @@
       <h2 class="mt-3">New book</h2>
       <%= render 'form', book: @book_new %>
     </div>
-
-
     <div class='col-md-8 offset-md-1'>
 
   		<h2>Book detail</h2>
-  		<tbody>
 
-  		<table class='table'>
-
+      <table class='table'>
+        <tbody>
           <tr>
-          <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
-            <%= @book.user.name %>
-            <% end %>
-          </td>
-          <td><%= link_to @book.title, @book %></td>
-          <td><%= @book.body %></td>
-          <td>
-            <% if @book.favorited_by?(current_user) %>
+            <td>
+              <%= link_to(@book.user) do %>
+              <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+              <%= @book.user.name %>
+              <% end %>
+            </td>
+            <td><%= link_to @book.title, @book %></td>
+            <td><%= @book.body %></td>
+            <td> <!--いいね-->
+              <% if @book.favorited_by?(current_user) %>
                 <%= link_to book_favorites_path(@book), method: :delete do %>
                   ♥<%= @book.favorites.count %>
                 <% end %>
-            <% else %>
+              <% else %>
                 <%= link_to book_favorites_path(@book), method: :post do %>
                   ♡<%= @book.favorites.count %>
                 <% end %>
-            <% end %>
-          </td>
-          <td><% if @book.user == current_user %></td><!--もし、本の投稿をしたユーザーと現在ログインしているユーザーが一致していたら下記を表示-->
-            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
-            <% end %>
+              <% end %>
 
-
-
-
+            </td>
+            <% if @book.user == current_user %><!--もし、本の投稿をしたユーザーと現在ログインしているユーザーが一致していたら下記を表示-->
+              <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+              <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
               <td>コメント件数：<%= @book.book_comments.count %></td>
-              </tr>
-                <tr>
+            <% end %>
+          </tr>
+        </tbody>
+      </table>
 
-                <% @book.book_comments.each do |book_comment| %>
-                <td width="50">
-                  <%= image_tag book_comment.user.get_profile_image, size: "100x100" %><br>
-                  <%= book_comment.user.name %>
-                </td>
-                   <td><%= book_comment.comment %></td>
-                  <% if book_comment.user == current_user %>
-                  <td><%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %></td>
-                <% end %>
-                <% end %>
-                </tr>
+      <table>
+        <% @book.book_comments.each do |book_comment| %>
+          <tr>
+            <td width="50">
+              <%= image_tag book_comment.user.get_profile_image, size: "100x100" %><br>
+              <%= book_comment.user.name %>
+            </td>
+            <td><%= book_comment.comment %></td>
 
-
-                <div>
-                  <tr>
-                    <%= render 'layouts/errors', obj: @book_comment %> <!--バリデーション設定-->
-                  <td><%= form_with model: [@book, @book_comment] do |f| %>
-                    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-                    <div>
+            <td>
+              <% if book_comment.user == current_user %>
+                <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+          <div>
+            <tr>
+              <%= render 'layouts/errors', obj: @book_comment %> <!--バリデーション設定-->
+              <%= form_with model: [@book, @book_comment] do |f| %>
+                <td>
+                  <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+                  <div>
                     <%= f.submit "送信" %>
-                    </div>
-                    <% end %>
-                  </td>
-                  </tr>
-                </div>
-          <tbody>
+                  </div>
+                </td>
+              <% end %>
+            </tr>
+          </div>
       </table>
     </div>
   </div>
