Added follow function

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -9,6 +9,27 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+	  <th>follows</th>
+	  <th>
+	    <%= link_to user_followings_path(user) do%>
+	    <%= user.followings.count %>
+    </th>
+	  <% end %>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th>
+      <%= link_to user_followers_path(user) do%>
+      <%= user.followers.count %>
+    </th>
+    <% end %>
+  </tr>
+
+
+
+
+
 </table>
 
 <div class='row'>
