--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,6 +7,7 @@
       <%= render 'layouts/errors', obj: @book %> <!--バリデーションの記述を追加-->
       <h2>User info</h2>
       <%= render 'users/info', user: current_user %>
+      <%= render 'users/follow_form', user: @user %>
       <h2 class="mt-3">New book</h2>
       <%= render 'form', book: @book %>
     </div>
