--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,7 +7,7 @@
 
       <h2>User info</h2>
       <%= render 'users/info', user: @user %> <!--user: @userを追加した-->
-
+      <%= render 'users/follow_form', user: @user %>
       <h2 class="mt-3">New book</h2>
       <%= render 'form', book: @book_new %>
     </div>
