--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,4 +1,4 @@
-<!--ユーザ一覧部分テンプレート-->
+<!--Users部分テンプレート-->
 <table class='table'>
   <thead>
     <tr>
@@ -12,6 +12,17 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
+        <td>フォロー数: <%= user.followings.count %></td>
+        <td>フォロワー数: <%= user.followers.count %></td>
+        <td>
+          <% if user.id != current_user.id %>
+            <% if current_user.following?(user) %>
+              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+            <% else %>
+              <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+            <% end %>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', user %></td>
       </tr>
     <% end %>
