Add search function

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <%= render 'layouts/header' %>
       <main>
-
+        <div class="d-flex justify-content-center mb-2">
+          <%= render "searches/form" %>
+        </div>
         <p id="notice"><%= notice %></p>
         <%= yield %> <!--レイアウトの表示には各ページの内容として別途作成されたhtmlファイルの内容を 持ってくるメソッド-->
       </main>
