--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,25 +16,12 @@
           <%= image_tag book.user.get_profile_image, size:'50x50' %>
           <% end %>
         </td>
-        <td><%= link_to book.title,book %></td>
-        <td><%= book.body %></td>
-
-
-            <% if book.favorited_by?(current_user) %>
-              <td>
-                <%= link_to book_favorites_path(book.id), method: :delete do %>
-                  ♥<%= book.favorites.count %>
-                <% end %>
-              </td>
-              <% else %>
-              <td>
-                <%= link_to book_favorites_path(book.id), method: :post do %>
-                  ♡<%= book.favorites.count %>
-                <% end %>
-              </td>
-            <% end %>
-
-             <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
+          <td><%= link_to book.title,book %></td>
+          <td><%= book.body %></td>
+          <td id="favorite_btn_<%= book.id %>">
+            <%= render 'favorites/btn', book: book %>
+          </td>
+            <%= render 'book_comments/counter', book: book %>
       </tr>
     <% end %>
   </tbody>
