--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,19 +24,13 @@
               <%= @book.user.name %>
               <% end %>
             </td>
-            <td><%= link_to @book.title, @book %></td>
-            <td><%= @book.body %></td>
-            <td> <!--いいね-->
-              <% if @book.favorited_by?(current_user) %>
-                <%= link_to book_favorites_path(@book), method: :delete do %>
-                  ♥<%= @book.favorites.count %>
-                <% end %>
-              <% else %>
-                <%= link_to book_favorites_path(@book), method: :post do %>
-                  ♡<%= @book.favorites.count %>
-                <% end %>
-              <% end %>
-
+              <td><%= link_to @book.title, @book %></td>
+              <td><%= @book.body %></td>
+              <td id="favorite_btn_<%= @book.id %>">
+                <%= render 'favorites/btn', book: @book %>
+                <td id="comment_counter">
+                  <%= render "book_comments/counter", book: @book %>
+                </td>
             </td>
             <% if @book.user == current_user %><!--もし、本の投稿をしたユーザーと現在ログインしているユーザーが一致していたら下記を表示-->
               <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -47,36 +41,10 @@
         </tbody>
       </table>
 
-      <table>
-        <% @book.book_comments.each do |book_comment| %>
-          <tr>
-            <td width="50">
-              <%= image_tag book_comment.user.get_profile_image, size: "100x100" %><br>
-              <%= book_comment.user.name %>
-            </td>
-            <td><%= book_comment.comment %></td>
-
-            <td>
-              <% if book_comment.user == current_user %>
-                <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
-              <% end %>
-            </td>
-          </tr>
-        <% end %>
-          <div>
-            <tr>
-              <%= render 'layouts/errors', obj: @book_comment %> <!--バリデーション設定-->
-              <%= form_with model: [@book, @book_comment] do |f| %>
-                <td>
-                  <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-                  <div>
-                    <%= f.submit "送信" %>
-                  </div>
-                </td>
-              <% end %>
-            </tr>
-          </div>
-      </table>
+      <div id="comment_index">
+         <%= render "book_comments/index", book: @book %>
+      </div>
+      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
