--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,6 +11,7 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
+      <%= link_to "いいねの多い順", books_path(sort: 'favorite DESC') %>
       <%= render 'index', books: @books, user: @user%>
     </div>
   </div>
